feat: auth header envoy, card move, feature del

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,7 +28,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.3.3",
+    "@nestjs/microservices": "^10.3.7",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.1",
@@ -45,6 +45,7 @@
     "firebase": "^10.9.0",
     "joi": "^17.12.0",
     "keycloak-connect": "^24.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^8.1.1",
     "nest-keycloak-connect": "^1.10.0",
     "protoc-gen-grpc-web": "^1.4.2",
@@ -52,8 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.22.4",
-    "lodash": "^4.17.21"
+    "zod-to-json-schema": "^3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
