--- a/Frontend/user/package.json
+++ b/Frontend/user/package.json
@@ -41,6 +41,7 @@
     "@trello-v2/shared": "*",
     "axios": "^1.6.7",
     "faker": "^5.5.3",
+    "keycloak-js": "^24.0.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.3",
@@ -58,9 +59,9 @@
     "styled-components": "^6.1.8",
     "styles": "^0.2.1",
     "uuid": "^9.0.1",
+    "vite": "^5.1.1",
     "wait-on": "^7.2.0",
-    "yup": "^1.3.3",
-    "vite": "^5.1.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
@@ -76,6 +77,7 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
+    "caniuse-lite": "^1.0.30001600",
     "concurrently": "^8.2.2",
     "cypress": "^13.7.0",
     "eslint": "^8.55.0",
