--- a/Frontend/user/package.json
+++ b/Frontend/user/package.json
@@ -40,6 +40,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@trello-v2/shared": "*",
     "axios": "^1.6.7",
+    "caniuse-lite": "^1.0.30001603",
     "faker": "^5.5.3",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -58,9 +59,9 @@
     "styled-components": "^6.1.8",
     "styles": "^0.2.1",
     "uuid": "^9.0.1",
+    "vite": "^5.1.1",
     "wait-on": "^7.2.0",
-    "yup": "^1.3.3",
-    "vite": "^5.1.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
@@ -75,7 +76,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "cypress": "^13.7.0",
     "eslint": "^8.55.0",
@@ -83,7 +84,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
