--- a/Frontend/user/.env
+++ b/Frontend/user/.env
@@ -1,5 +1,5 @@
 VITE_URL_API=http://localhost:10000
 VITE_MODE=dev
-VITE_KEYCLOAK_AUTH_SERVER_URL=http://localhost:8090
+VITE_KEYCLOAK_AUTH_SERVER_URL=https://20127047-keycloak-trello.azurewebsites.net
 VITE_KEYCLOAK_REALM=trello
 VITE_KEYCLOAK_CLIENT_ID=trello
