--- a/Backend/package.json
+++ b/Backend/package.json
@@ -37,6 +37,7 @@
     "@trello-v2/shared": "^1.0.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^9.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "eslint": "^8.56.0",
@@ -45,6 +46,7 @@
     "firebase": "^10.9.0",
     "joi": "^17.12.0",
     "keycloak-connect": "^24.0.1",
+    "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.1.1",
     "nest-keycloak-connect": "^1.10.0",
