--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "Frontend/user",
     "packages/shared"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "keycloak-js": "^24.0.2"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "rimraf": "^5.0.5"
