--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,13 +21,16 @@
     "ncc:build": "node build.js"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.2",
     "@grpc/grpc-js": "^1.10.1",
     "@grpc/proto-loader": "^0.7.10",
     "@keycloak/keycloak-admin-client": "^23.0.7",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/microservices": "^10.3.7",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
@@ -43,6 +46,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "firebase": "^10.9.0",
+    "graphql": "^16.8.1",
     "joi": "^17.12.0",
     "keycloak-connect": "^24.0.1",
     "lodash": "^4.17.21",
