--- a/Frontend/user/package.json
+++ b/Frontend/user/package.json
@@ -58,6 +58,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
     "styles": "^0.2.1",
