--- a/Frontend/user/package.json
+++ b/Frontend/user/package.json
@@ -76,6 +76,7 @@
     "@types/randomcolor": "^0.5.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-tabs": "^5.0.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
