--- a/docker-compose.db.yaml
+++ b/docker-compose.db.yaml
@@ -1,11 +1,11 @@
 version: "3.8"
-name: "backend"
+name: "backend-demo"
 services:
   mongo:
     image: mongo
     restart: always
     ports:
-      - 7001:27017
+      - 6001:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: MONGO_USER
       MONGO_INITDB_ROOT_PASSWORD: MONGO_123
@@ -14,7 +14,7 @@ services:
     image: mongo-express:1.0.2-20-alpine3.19
     restart: always
     ports:
-      - 8081:8081
+      - 6081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: MONGO_USER
       ME_CONFIG_MONGODB_ADMINPASSWORD: MONGO_123
