--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -1,13 +1,7 @@
-events {
-    worker_connections 1000;
-}
-
-http {
-    server {
-        listen 80
-
-        listen / {
-            proxy_pass http://envoy:10000 
-        }
+server {
+    listen 7080
+    
+    location / {
+        proxy_pass http://backend-workspace:7080 
     }
 }
